[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/inventory_icons/Forage/clam.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Nature/Forage/Clam.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 63.0

[node name="Clam" type="Node2D"]
script = ExtResource( 2 )

[node name="Clam" type="Sprite" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="MovementCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementCollision"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="Btn" type="Button" parent="."]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="Btn" to="." method="_on_Btn_mouse_entered"]
[connection signal="mouse_exited" from="Btn" to="." method="_on_Btn_mouse_exited"]
[connection signal="pressed" from="Btn" to="." method="_on_Btn_pressed"]
[connection signal="area_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_area_entered"]
[connection signal="area_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_area_exited"]
